.metadata/.plugins/org.eclipse.cdt.ui/Ejer 3-5.build.log
12:02:03 **** Rebuild of configuration Debug for project Ejer 3-5 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ejer 3-5.o" "..\\src\\Ejer 3-5.c" 
..\src\Ejer 3-5.c: In function 'main':
..\src\Ejer 3-5.c:35:12: error: too many arguments to function 'Sumar2'
   35 |  result2 = Sumar2(num1, num2);
      |            ^~~~~~
..\src\Ejer 3-5.c:12:5: note: declared here
   12 | int Sumar2(void);
      |     ^~~~~~

12:02:03 Build Failed. 1 errors, 0 warnings. (took 328ms)

